Storing run pod events in a new table. Storing VM costs too
